Made a clean code v1.1

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.log
 
 .idea
+jdbcTask.iml
 
 # BlueJ files
 *.ctxt
@@ -25,3 +26,4 @@
 hs_err_pid*
 src/main/resources/
 src/test/
+target/generated-sources/
