--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <!-- Servlet -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
